--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <html>
 <head>
 	<title>BERT vs MATTHIJS - Foosbal score</title>
+	<style>
+		body {
+			text-align: center;
+			font-size: 20px;
+		}
+		h1 {
+			font-size: 2em;
+		}
+		.name,
+		.points {
+			display: block;
+		}
+		.name {
+			
+		}
+		.points {
+			font-size: 10vw;
+		}
+	</style>
 </head>
 <body>
 
