--- a/index.html
+++ b/index.html
@@ -7,19 +7,10 @@
 			text-align: center;
 			font-size: 20px;
 		}
-		h1 {
-			font-size: 2em;
-		}
+		/* h1 { font-size: 2em; } */
 		.name,
-		.points {
-			display: block;
-		}
-		.name {
-			
-		}
-		.points {
-			font-size: 10vw;
-		}
+		.points { display: block; }
+		.points { font-size: 10vw; }
 	</style>
 </head>
 <body>
