--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 		/* h1 { font-size: 2em; } */
 		.name,
 		.points { display: block; }
-		.points { font-size: 10vw; }
+		.points { font-size: 30vw; }
+		.score {
+			float: left;
+			width: 50%;
+		}
 	</style>
 </head>
 <body>
 
-  <h1>Foosbal score</h1>
+  <h1>Foosbal Score</h1>
 
   <div class="score bert">
     <span class="name">Bert</span>
