--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 			text-align: center;
 			font-size: 20px;
 		}
-		/* h1 { font-size: 2em; } */
+		h1 {
+			font-size: 5vw;
+		}
 		.name,
 		.points { display: block; }
 		.points { font-size: 30vw; }
@@ -22,13 +24,13 @@
   <h1>Foosbal Score</h1>
 
   <div class="score bert">
-    <span class="name">Bert</span>
     <span class="points">6</span>
+    <span class="name">Bert</span>
   </div>
   
   <div class="score matthijs">
-    <span class="name">Matthijs</span>
     <span class="points">5</span>
+    <span class="name">Matthijs</span>
   </div>
 
 </body>
