--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		}
 		.name,
 		.points { display: block; }
-		.points { font-size: 30vw; }
+		.points { font-size: 30vw; margin-bottom: -5vw; }
 		.score {
 			float: left;
 			width: 50%;
