--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 		body {
 			text-align: center;
 			font-size: 20px;
+			font-family: Georgia, serif;
 		}
 		h1 {
 			font-size: 5vw;
 		}
 		.name,
 		.points { display: block; }
-		.points { font-size: 30vw; margin-bottom: -5vw; }
+		.points { font-size: 40vw; margin-bottom: -5vw; }
 		.score {
 			float: left;
 			width: 50%;
