--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		body {
 			text-align: center;
 			font-size: 20px;
-			font-family: Georgia, serif;
+			font-family: "Times New Roman", serif;
 		}
 		h1 {
 			font-size: 5vw;
