--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 			font-size: 20px;
 			font-family: sans-serif;
 		}
-		h1 {
-			font-size: 5vw;
-		}
+		h1 { font-size: 5vw; font-family: serif; }
 		.name,
 		.points { display: block; }
 		.points { font-size: 40vw; margin-bottom: -5vw; font-family: serif; }
