--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 			font-size: 20px;
 			font-family: sans-serif;
 		}
+		body:before {
+			content: "";
+			display: block;
+			width: 100vw;
+			height: 100vw;
+			top: 0;
+			left: 0;
+			opacity: .5;
+			background: url(http://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Fussball_Player.JPG/1280px-Fussball_Player.JPG) no-repeat top left;
+			background-size: cover;
+		}
 		h1 { font-size: 5vw; font-family: serif; }
 		.name,
 		.points { display: block; }
