--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 			text-align: center;
 			font-size: 20px;
 			font-family: sans-serif;
+			padding: 0;
+			margin: 0;
 		}
 		body:before {
 			content: "";
 			display: block;
+			position: absolute;
 			width: 100vw;
 			height: 100vw;
 			top: 0;
 			left: 0;
-			opacity: .5;
+			opacity: .3;
 			background: url(http://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Fussball_Player.JPG/1280px-Fussball_Player.JPG) no-repeat top left;
 			background-size: cover;
 		}
