--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			background: url(http://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Fussball_Player.JPG/1280px-Fussball_Player.JPG) no-repeat top left;
 			background-size: cover;
 		}
-		h1 { font-size: 10vw; font-family: serif; }
+		h1 { font-size: 10vw; font-family: serif; margin-bottom: 0; }
 		.name,
 		.points { display: block; }
 		.points { font-size: 40vw; margin-bottom: -5vw; font-family: serif; }
